--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: '8'
-        distribution: 'adopt'
+        java-version: '1.8'
+        distribution: 'temurin'
         cache: maven
     - name: Build with Maven
       run: mvn clean install
