--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,12 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: s4u/setup-maven-action@v1.2.1
       with:
         java-version: 8
-#        distribution: 'temurin'
-#        cache: maven
+        distribution: 'temurin'
+        cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install -Dmaven.test.skip
