--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     ports:
       - "3306:3306"
     container_name: database_container
+    volumes:
+      - mysql-data4:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=invoiceDatabase
@@ -33,3 +35,6 @@ services:
       - MYSQL_PORT=3306
     depends_on:
       - mydb
+
+volumes:
+  mysql-data4:
